--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self' https://todo-app-backend-three-psi.vercel.app https://accounts.google.com; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' https://lh3.googleusercontent.com data:;"
+          "value": "default-src 'self' https://*.vercel.app https://*.google.com https://accounts.google.com https://lh3.googleusercontent.com; connect-src 'self' https://*.vercel.app https://accounts.google.com; script-src 'self' 'unsafe-inline' https://*.google.com; style-src 'self' 'unsafe-inline'; img-src 'self' https://lh3.googleusercontent.com data: https://*.googleusercontent.com; frame-src https://accounts.google.com;"
         },
         {
           "key": "X-Content-Type-Options",
@@ -17,7 +17,7 @@
         },
         {
           "key": "X-Frame-Options",
-          "value": "DENY"
+          "value": "SAMEORIGIN"
         },
         {
           "key": "X-XSS-Protection",
@@ -26,10 +26,6 @@
         {
           "key": "Referrer-Policy",
           "value": "strict-origin-when-cross-origin"
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
         }
       ]
     }
